--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,23 +1,49 @@
-.heading {
-    color: white;
-    background-color: purple;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#header {
+    background-color: skyblue;
+    border: 2px solid black;
+    height: 100px;
+    font-size: 35px;
+    font-weight: 600;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    text-decoration: underline dashed;
+    padding: 10px;
+    border-radius: 20px;
 
 }
 
-/* #heading{
-        color: white;
-        background-color: purple;
-       } */
-
-/* attributes - class, ID */
+.div {
+    background-color: blue;
+    border: 4px solid black;
+    height: 100px;
+    font-size: 35px;
+    font-weight: 600;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    text-decoration: underline dashed;
+    padding: 10px;
+    color: white;
+    border-radius: 100px;
+}
 
 .button {
-    background-color: skyblue;
-    color: blue;
-    font-size: 25px;
-    font-weight: bold;
+    background-color: #f6a88e;
+    font-size: 30px;
+    padding: 10px;
+    border-radius: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: black;
+    font-weight: 600;
 }
 
-p{
-    background-color: blue;
+.para{
+    font-size: 25px;
+    font-family: "Edu NSW ACT Cursive", cursive;
 }
